force-app/main/default/objects/Long_Term_Loan_Repayment__c/Long_Term_Loan_Repayment__c.object-meta.xml
<CustomObject>
    <label>Long Term Loan Repayment</label>
    <nameField>
        <displayFormat>LT-Loan-Repay-{0000000000}</displayFormat>
        <label>Long Term Loan Repayment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Long Term Loan Repayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>