force-app/main/default/objects/Long_Term_Loan_Repayment__c/fields/Account_Suffix_Ref__c.field-meta.xml
<CustomField>
    <fullName>Account_Suffix_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Account/Suffix/Ref</label>
    <length>33</length>
    <type>Text</type>
</CustomField>