force-app/main/default/objects/Long_Term_Loan_Repayment__c/fields/AccountId_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AccountId_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AccountId Due Date</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>