force-app/main/default/objects/Long_Term_Loan_Repayment__c/fields/Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>